# Xiamen-Guangchen-Intelligent-Interview

./: .gitignore  README.md  requirements.txt  架构设计题解答.md
AutoMemory/: .env.example  .gitignore  LICENSE  README.md  plan.md  pyproject.toml
AutoMemory/automem/: __init__.py  config.py  feedback.py  mcp_server.py  memory.py  models.py  retrieval.py  scoring.py
AutoMemory/automem/extraction/: __init__.py  extractor.py  prompts.py
AutoMemory/automem/providers/: __init__.py  embedder.py  llm.py  reranker.py
AutoMemory/automem/store/: db.py  memory_store.py  schema.sql
AutoMemory/evaluation/: ablation_feedback.py
AutoMemory/evaluation/locomo/: add_runner.py  baseline_runner.py  common.py  judge.py  search_runner.py
AutoMemory/evaluation/longmemeval/: ab_dev.sh  add_runner.py  baseline_runner.py  common.py  diagnose_deep.py  diagnose_flips.py  judge.py  measure_cost.py  probe_supersession.py  run_full.py  run_full_launch.cmd  search_runner.py  smoke_slot.py  summarize.py
AutoMemory/evaluation/results/: ablation.json  automem_results_fresh.json  automem_results_fresh_scored.json  dev_ab_new_automem.json  dev_ab_new_automem_scored.json  dev_ab_new_config.json  dev_ab_old_automem.json  dev_ab_old_automem_config.json  dev_ab_old_automem_scored.json  lme2_automem.json  lme2_automem_k30.json  lme2_automem_k30_scored.json  lme2_automem_scored.json  lme3_asof_auto.json  lme_rag.json  (+29 more)
AutoMemory/examples/: demo_e2e.py
AutoMemory/tests/: test_llm_parse.py  test_pipeline.py  test_providers_smoke.py  test_retrieval.py  test_retrospective.py  test_scoring.py  test_store.py
(+30 files in other folders)
