[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "automem"
version = "0.1.0"
description = "A human-like long-term memory module: time decay, importance, utility feedback, and activation spreading."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",
    "httpx>=0.27",
    "numpy>=1.26",
    "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0"]
eval = ["nltk>=3.8", "pandas>=2.0", "tqdm>=4.66"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["automem*"]

[tool.setuptools.package-data]
automem = ["store/schema.sql"]

[tool.pytest.ini_options]
markers = [
    "api: tests that require live API keys (deselect with '-m \"not api\"')",
]
